src/css/components/nav-primary.css
.primary-nav {
  ul {
    list-style: none;
  }

  li {
    margin-bottom: var(--sp1-5);

    &:last-child {
      margin-bottom: 0;
    }

    &[aria-haspopup="true"] {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;

      @media (--nav) {
        /*
          If the list item has a submenu, the hover effect, is super noticable,
          so we remove it.
        */
        > a {
          display: block;

          span:after {
            content: none;
          }
        }
      }
    }
  }

  a {
    font-size: 28px;
    font-weight: bold;
    line-height: var(--sp2);
    letter-spacing: -1px;
    color: var(--black-1);

    @media (--nav) {
      font-size: 16px;
      letter-spacing: 0.02em;
    }
  }
}

.primary-nav--level-1 {
  margin: 0;
  padding: 0;

  @media (--nav) {
    display: flex;
    align-items: center;

    > li {
      position: relative; /* Anchor secondary menu */
      display: flex;
      align-items: center;
      margin: 0;

      &:not(:last-child) {
        margin-right: var(--sp2);
      }

      &:hover {
        .primary-nav--level-2 {
          visibility: visible;
          opacity: 1;
          transform: translate(-50%, 0);
        }
      }

      /*
        Cannot combine the focus-within pseudoselector with other selectors,
        because it will break IE11 and MS Edge.
      */
      &:focus-within {
        .primary-nav--level-2 {
          visibility: visible;
          opacity: 1;
          transform: translate(-50%, 0);
        }
      }
    }

    a {
      position: relative;
      display: flex;

      &:hover,
      &:focus {
        outline: 0;

        span:after {
          transform: scalex(1);
        }
      }

      span {
        position: relative;
        display: inline-flex;
        align-items: center;
        padding: var(--sp2) 0;

        &:after {
          content: '';
          position: absolute;
          left: 0;
          bottom: 0;
          width: 100%;
          height: var(--sp0-5);
          transform: scalex(0);
          background: var(--color--blue-50);
          transition: transform 0.2s;
        }
      }
    }
  }
}

/* Dropdown nav */
.primary-nav--level-2 {
  flex-basis: 100%;
  padding-left: var(--sp2-5);
  border-left: solid var(--sp) var(--color--blue-50);
  margin-left: calc(-1 * var(--sp));
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  transition: opacity 0.2s;

  @media (--md) {
    margin-left: calc(-1 * var(--sp3));
    padding-left: var(--sp3);
  }

  @media (--nav) {
    position: absolute;
    top: calc(100% - (0.5 * var(--sp)));
    left: 50%;
    transform: translate(-50%, -20px);
    visibility: hidden;
    padding: calc(3 * var(--sp)) var(--sp2);
    background: white;
    border-top: solid var(--color--blue-50) var(--sp0-5);
    border-left: 0;
    margin-top: 0;
    margin-left: 0;
    border-radius: 0px 0px 2px 2px;
    width: 250px;
    box-shadow: 0 1px 36px rgba(0, 0, 0, 0.08);
    opacity: 0;
    transition: all 0.2s;
    max-height: none;
    overflow: visible;

    /* Arrow */
    &:after {
      content: '';
      position: absolute;
      bottom: calc(100% + (0.5 * var(--sp)));
      left: 50%;
      transform: translatex(-50%);
      height: 0;
      width: 0;
      border-left: solid 10px transparent;
      border-right: solid 10px transparent;
      border-bottom: solid 10px var(--color--blue-50);
    }
  }

  /*
    Cannot combine the focus-within pseudoselector with other selectors,
    because it will break IE11 and MS Edge.
  */
  &:focus-within {
    margin-top: var(--sp1-5);
    max-height: none;
    opacity: 1;

    @media (--nav) {
      margin-top: 0;
    }
  }

  &[aria-expanded="true"] {
    margin-top: var(--sp1-5);
    max-height: none;
    opacity: 1;

    @media (--nav) {
      margin-top: 0;
    }
  }

  a {
    font-size: 16px;
    line-height: var(--sp);
    font-weight: normal;

    @media (--nav) {
      display: block;

      span {
        padding: var(--sp0-5) 0;

        &:after {
          transform-origin: left;
          height: 3px;
        }
      }
    }
  }
}

/*
  Is inserted via JavaScript.
  Expands second level nav at mobile
*/
.primary-nav__button-expand {
  -webkit-appearance: none;
  border: 0;
  background: transparent;
  position: relative;
  width: var(--sp2);
  height: var(--sp2);
  text-indent: -999px;
  overflow: hidden;
  cursor: pointer;

  @media (--nav) {
    display: none;
  }

  &:before,
  &:after {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: var(--sp);
    height: 3px;
    background: var(--color--blue-50);
  }

  &:after {
    transform: translate(-50%, -50%) rotate(90deg);
    transition: opacity 0.2s;
  }

  &[aria-pressed="true"] {
    &:after {
      opacity: 0;
    }
  }
}

